Hero Section Complete

--- a/index.html
+++ b/index.html
@@ -191,7 +191,26 @@
                 </div>
             </div>
             <div class="hero__inner--visual">
+                <picture class="hero__inner-img-main">
+                    <source srcset="assets/img/hero/desktop-main.webp" width="750" height="750"
+                        media="(min-width: 1280px)" type="image/webp">
+                    <source srcset="assets/img/hero/desktop-main.webp" width="750" height="750"
+                        media="(min-width: 1280px)">
 
+                    <source srcset="assets/img/hero/tablet-main.webp" width="750" height="700"
+                        media="(min-width: 768px)" type="image/webp">
+                    <source srcset="assets/img/hero/tablet-main.webp" width="750" height="700"
+                        media="(min-width: 768px)">
+
+                    <source srcset="assets/img/hero/mobile-main.webp" width="400" height="450"
+                        media="(max-width: 767.9px)" type="image/webp">
+                    <source srcset="assets/img/hero/mobile-main.webp" width="400" height="450"
+                        media="(max-width: 767.9px)">
+
+                    <img src="assets/img/hero/mobile-main.webp"
+                        alt="Traveler sitting with suitcases ready for a new adventure" width="650" height="650"
+                        loading="lazy" decoding="async">
+                </picture>
             </div>
         </section>
         <!-- OFFER -->
