Full Optimization Complete

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="hero__btns">
                     <button type="button" class="hero__btn primary">Start Planning</button>
                     <button type="button" class="hero__btn ghost" data-modal-open="preview-modal" aria-haspopup="dialog"
-                        aria-controls="preview-modal">
+                        aria-controls="preview-modal" aria-label="Play video preview">
                         <img src="assets/img/icons/play.svg" width="24" height="24" alt="" class="hero__btn-icon">
                         <span>Watch Preview</span>
                     </button>
