--- a/prod/index.html
+++ b/prod/index.html
@@ -22,8 +22,8 @@
     <meta property="og:title" content="Wanderlust Adventures — Your Next Great Travel Experience">
     <meta property="og:description"
         content="Discover top destinations, secure the best flights, enjoy curated experiences, and plan your trip effortlessly.">
-    <meta property="og:image" content="/assets/img/og/og.webp">
-    <meta property="og:url" content="https://example.com">
+    <meta property="og:image" content="assets/img/og/og.webp">
+    <meta property="og:url" content="https://anzhelikaspekter.github.io/WA/prod/">
     <meta property="og:site_name" content="Wanderlust Adventures">
 
     <!-- Twitter -->
@@ -34,12 +34,12 @@
     <meta name="twitter:image" content="/assets/img/og/tw.webp">
 
     <!-- Favicons -->
-    <link rel="icon" href="/assets/img/favicons/favicon.ico?v=1">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32.png?v=1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16.png?v=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png?v=1">
-    <link rel="mask-icon" href="/assets/img/favicons/safari-pinned-tab.svg?v=1" color="#0D1117">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" href="assets/img/favicons/favicon.ico?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16.png?v=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png?v=1">
+    <link rel="mask-icon" href="assets/img/favicons/safari-pinned-tab.svg?v=1" color="#0D1117">
+    <link rel="manifest" href="site.webmanifest">
 
     <!-- Theme -->
     <meta name="theme-color" content="#0D1117">
